[gd_scene load_steps=4 format=3 uid="uid://dbdg4lqy2sigj"]

[ext_resource type="Script" path="res://UI/Choices.gd" id="1_sjtgb"]
[ext_resource type="Theme" uid="uid://dkdu8uvx0uyg2" path="res://UI/Notification.tres" id="2_4l5df"]
[ext_resource type="FontFile" uid="uid://bk2dttdvav1wm" path="res://Assets/Fonts/Custom/allcharacters-Sheet.png" id="3_wm5rs"]

[node name="Choices" type="CanvasLayer"]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_sjtgb")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.0172083
anchor_top = 0.062389
anchor_right = 0.390375
anchor_bottom = 0.335463
offset_left = -39.3
offset_top = 130.12
offset_right = -150.9
offset_bottom = -53.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_4l5df")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0932143
anchor_top = 0.422973
anchor_right = 3.9852
anchor_bottom = 1.46859
offset_left = -0.0800018
offset_top = 0.0499992
offset_right = 433.6
offset_bottom = 143.987
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wm5rs")
theme_override_font_sizes/font_size = 150
text = "Test"
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.0172083
anchor_top = 0.062389
anchor_right = 0.389958
anchor_bottom = 0.335463
offset_left = -39.3
offset_top = 192.12
offset_right = -150.9
offset_bottom = 8.19995
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_4l5df")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0895019
anchor_top = 0.440991
anchor_right = 3.94432
anchor_bottom = 1.41453
offset_left = -0.0800018
offset_top = 0.0499992
offset_right = 433.6
offset_bottom = 143.987
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wm5rs")
theme_override_font_sizes/font_size = 150
text = "Test"
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_inputA"]
[connection signal="gui_input" from="Panel2" to="." method="_on_panel_2_gui_inputB"]
